# pysunvox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml
examples/c/: MAKE_MACOS  Makefile  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
include/: functions.h  sunvox.h
src/: functions.c  main.c  sunvox.c  sunvox.pxd  sunvox.pyx
src/pysunvox/: __init__.py  __main__.py  _core.pyx  _sunvox.pxd  sunvox.py
sunvox_lib/headers/: sunvox.h
sunvox_lib/windows/lib_x86_64/: sunvox.def  sunvox.lib
tests/: test_pysunvox.py
